--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,3 +8,4 @@ services:
     restart: always
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/var/lib/docker:/var/lib/docker"
